2011-02-22  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst: Fixed permissions on /incoming dirs for www-data
	
	* lib/PandoraFMS/Config.pm: Updated version.

2011-02-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. Verify that there is a
	  data server running when computing server stats. Thanks to Tadashi
	  Kaneda.

2011-02-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Do not update the
	  module description if it's empty. Fixes bug #3162637.

2011-02-14  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Merged from trunk. Fixed invalid module
	id with creation of network module. Network module should be 2.

2011-02-08  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_recode_db.pl: Added characters to translate
	to html entities into safe_input and safe_output. Clean
	repeated code into recode script.
	Merged from Trunk

2011-02-07  Sancho Lerena <slerena@artica.es>

	* pandora_server/DEBIAN/control,
	pandora_server/pandora_server.spec,
	pandora_server/pandora_server.redhat.spec: Added LWP dependency for
	reverse Geocoding feature. This is included on all distros.

	* pandora_server/conf/pandora_server.conf,
	pandora_server/lib/PandoraFMS/Config.pm,
	pandora_server/lib/PandoraFMS/DataServer.pm: Added support for reverse geocoding using
	GoogleMaps api. 

2011-01-31  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Fixed a codification bug with
	the CLI policy apply

2010-01-07  Juan Manuel Ramon  <juanmanuel.ramon@artica.es>

	* pandora_server_upgrade: Changed permissions in this file to make it executable by default.

	Fixes bug #3146314.

2010-01-07  Juan Manuel Ramon  <juanmanuel.ramon@artica.es>
       
	* pandora_server_installer: Installer applies correct permissions 
	  to /var/spool/pandora directory using pandora_server_installer in Suse. 
	  Fixes bug #3150287.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>
